# jaxmg

./: CITATION.cff  CMakeLists.txt  CONTRIBUTING.md  README.md  cholesky.py  mkdocs.yml  pyproject.toml  test_potri_mp.py
.github/workflows/: draft-pdf.yml
.jenkins/: Dockerfile12  Dockerfile13  Jenkinsfile
docs/: index.md  install.md
docs/examples/: spmd_mpmd.ipynb
docs/technical_details/: col_maj.md
paper/: paper.bib  paper.md
src/cuda/: cyclic.cu  potrf.cu  potrf_mp.cu  potri.cu  potri_mp.cu  potrs.cu  syevd_mp.cu  syevd_no_V.cu  syevd_no_V_mp.cu
src/cuda/include/: process_barrier.h
src/cuda/utils/: jax_utils.h
src/jaxmg/: __init__.py  _potrf.py  _potri.py  _potrs.py
tests/: conftest.py
tests/mpmd/: mpmd_helper.py  run_potri.py  run_potrs.py  run_syevd.py  test_launch_potri.py  test_launch_potrs.py  test_launch_syevd.py
