[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jaxmg"
version = "0.0.3"
description = "JAXMg provides a C++ interface between JAX and cuSolverMg, NVIDIA's multi-GPU linear solver. "
authors = [{ name = "Roeland Wiersema" }]
classifiers = ["Programming Language :: Python :: 3"]
dependencies = [
    "jax>=0.6.2; sys_platform == 'linux'",
]
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE"]

[project.urls]
Homepage = "https://github.com/therooler/jaxmg"
Issues = "https://github.com/therooler/jaxmg/issues"
Docs = "https://therooler.github.io/jaxmg/"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
jaxmg = [
    "cu12/libcyclic.so",
    "cu12/libpotrs.so",
    "cu12/libpotrs_mp.so",
    "cu12/libpotri.so",
    "cu12/libsyevd.so",
    "cu12/libsyevd_no_V.so",
    "cu13/libcyclic.so",
    "cu13/libpotrs.so",
    "cu13/libpotrs_mp.so",
    "cu13/libpotri.so",
    "cu13/libsyevd.so",
    "cu13/libsyevd_no_V.so",
]

[project.optional-dependencies]

docs = [
    "jax>=0.6.2",
    "mkdocs==1.6.1",
    "mkdocs-material==9.6.23",
    "mkdocstrings==0.30.1",
    "mkdocs-exclude==1.0.2",
    "mkdocs-ipynb==0.1.1",
    "hippogriffe==0.2.2",
]

dev = [
    "matplotlib>=3.10.3",
    "jax[cuda12]>=0.6.2",
    "pytest==8.2.1",
    "mkdocs==1.6.1",
    "mkdocs-material==9.6.23",
    "mkdocstrings==0.30.1",
    "mkdocs-exclude==1.0.2",
    "mkdocs-ipynb==0.1.1",
    "hippogriffe==0.2.2",
]

cuda12 = [
    "jax[cuda12]>=0.6.2"
]

cuda13 = [
    "jax[cuda13]>=0.7.2"
]

cuda12-local = [
    "jax[cuda12-local]>=0.6.2"
]

cuda13-local = [
    "jax[cuda13-local]>=0.7.2"
]
